@@ -28,15 +28,22 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Implementação do serviço de agendamentos de visitas.
  */
 @Service
-@RequiredArgsConstructor
 @Slf4j
+@RequiredArgsConstructor
 public class AgendamentoVisitaServiceImpl implements AgendamentoVisitaService {
+
+    private final AgendamentoVisitaRepository agendamentoRepository;
+    private final CustodiadoRepository custodiadoRepository;
+    private final VisitanteRepository visitanteRepository;
+    private final StatusRepository statusRepository;
+
+    // Agora usamos esse bean injetado (sem métodos estáticos)
+    private final HorarioVisitaUtil horarioVisitaUtil;
 
     // Constantes para mensagens de erro
     private static final String MSG_CUSTODIADO_NAO_ENCONTRADO = "Custodiado não encontrado com ID: ";
@@ -45,76 +52,72 @@ public class AgendamentoVisitaServiceImpl implements AgendamentoVisitaService {
     private static final String MSG_LIMITE_VISITANTES = "Este custodiado já atingiu o limite de 2 visitantes para este dia.";
     private static final String MSG_CONFLITO_CUSTODIADO = "Já existe um agendamento para este custodiado próximo a este horário.";
     private static final String MSG_CONFLITO_VISITANTE = "O visitante já possui outro agendamento próximo a este horário.";
-    private static final String MSG_HORARIO_NAO_PERMITIDO = "Horário não permitido para visitas. As visitas são permitidas de terça a domingo, das 9h às 17h.";
+    private static final String MSG_HORARIO_NAO_PERMITIDO = "Horário não permitido para visitas. As visitas são permitidas apenas quartas e quintas, das 9h às 15h.";
     private static final String MSG_AGENDAMENTO_CANCELADO = "Agendamento já está cancelado.";
     private static final String MSG_AGENDAMENTO_REALIZADO = "Não é possível cancelar um agendamento já realizado.";
-    
+
     // Constantes para status
     private static final String STATUS_AGENDADO = "AGENDADO";
     private static final String STATUS_CONFIRMADO = "CONFIRMADO";
     private static final String STATUS_REALIZADO = "REALIZADO";
     private static final String STATUS_CANCELADO = "CANCELADO";
 
-    private final AgendamentoVisitaRepository agendamentoRepository;
-    private final CustodiadoRepository custodiadoRepository;
-    private final VisitanteRepository visitanteRepository;
-    private final StatusRepository statusRepository;
-
     @Override
-@Transactional
-public AgendamentoVisitaResponseDTO criarAgendamento(AgendamentoVisitaRequestDTO requestDTO) {
-    log.info("Iniciando criação de agendamento de visita");
-    
-    // Validar se o horário está dentro dos períodos permitidos
-    if (!HorarioVisitaUtil.isHorarioPermitido(requestDTO.getDataHoraAgendamento())) {
-        log.warn("Tentativa de agendamento em horário não permitido: {}", requestDTO.getDataHoraAgendamento());
-        throw new HorarioNaoPermitidoException(MSG_HORARIO_NAO_PERMITIDO);
-    }
-    
-    // Buscar entidades relacionadas
-    Custodiado custodiado = custodiadoRepository.findById(requestDTO.getCustodiadoId())
-            .orElseThrow(() -> new RecursoNaoEncontradoException(MSG_CUSTODIADO_NAO_ENCONTRADO + requestDTO.getCustodiadoId()));
-    
-    Visitante visitante = visitanteRepository.findById(requestDTO.getVisitanteId())
-            .orElseThrow(() -> new RecursoNaoEncontradoException(MSG_VISITANTE_NAO_ENCONTRADO + requestDTO.getVisitanteId()));
-    
-    Status statusAgendado = statusRepository.findByDescricaoIgnoreCase(STATUS_AGENDADO)
-            .orElseThrow(() -> new RecursoNaoEncontradoException("Status AGENDADO não encontrado"));
-    
-    // Verificar limite de visitantes por dia para o mesmo custodiado
-    LocalDate dataVisita = requestDTO.getDataHoraAgendamento().toLocalDate();
-    long visitasNoMesmoDia = agendamentoRepository.countByCustodiadoIdAndDataHoraAgendamentoBetween(
+    @Transactional
+    public AgendamentoVisitaResponseDTO criarAgendamento(AgendamentoVisitaRequestDTO requestDTO) {
+        log.info("Iniciando criação de agendamento de visita");
+        
+        // Agora usa o objeto injetado:
+        if (!horarioVisitaUtil.isHorarioPermitido(requestDTO.getDataHoraAgendamento())) {
+            log.warn("Tentativa de agendamento em horário não permitido: {}", requestDTO.getDataHoraAgendamento());
+            throw new HorarioNaoPermitidoException(MSG_HORARIO_NAO_PERMITIDO);
+        }
+
+        // Buscar entidades relacionadas
+        Custodiado custodiado = custodiadoRepository.findById(requestDTO.getCustodiadoId())
+                .orElseThrow(() -> new RecursoNaoEncontradoException(MSG_CUSTODIADO_NAO_ENCONTRADO + requestDTO.getCustodiadoId()));
+
+        Visitante visitante = visitanteRepository.findById(requestDTO.getVisitanteId())
+                .orElseThrow(() -> new RecursoNaoEncontradoException(MSG_VISITANTE_NAO_ENCONTRADO + requestDTO.getVisitanteId()));
+
+        Status statusAgendado = statusRepository.findByDescricaoIgnoreCase(STATUS_AGENDADO)
+                .orElseThrow(() -> new RecursoNaoEncontradoException("Status AGENDADO não encontrado"));
+
+        // Verificar limite de visitantes por dia para o mesmo custodiado
+        LocalDate dataVisita = requestDTO.getDataHoraAgendamento().toLocalDate();
+        long visitasNoMesmoDia = agendamentoRepository.countByCustodiadoIdAndDataHoraAgendamentoBetween(
             custodiado.getId(), 
             dataVisita.atStartOfDay(), 
             dataVisita.atTime(23, 59, 59));
-    
-    if (visitasNoMesmoDia >= 2) {
-        log.warn("Limite de visitantes por dia excedido para o custodiado ID: {}", custodiado.getId());
-        throw new AgendamentoConflitanteException(MSG_LIMITE_VISITANTES);
-    }
-        
-       // Verificar se o custodiado já tem agendamento no mesmo horário
-List<AgendamentoVisita> agendamentosConflitantes = agendamentoRepository.findAgendamentosConflitantes(
-    custodiado.getId(),
-    requestDTO.getDataHoraAgendamento().minusHours(1),
-    requestDTO.getDataHoraAgendamento().plusHours(1),
-    getStatusCanceladoId());
 
-if (!agendamentosConflitantes.isEmpty()) {
-log.warn("Conflito de agendamento detectado para o custodiado ID: {}", custodiado.getId());
-throw new AgendamentoConflitanteException(MSG_CONFLITO_CUSTODIADO);
-}
+        if (visitasNoMesmoDia >= 2) {
+            log.warn("Limite de visitantes por dia excedido para o custodiado ID: {}", custodiado.getId());
+            throw new AgendamentoConflitanteException(MSG_LIMITE_VISITANTES);
+        }
 
-// Verificar se o visitante já tem agendamento no mesmo horário
-List<AgendamentoVisita> agendamentosVisitante = agendamentoRepository.findByVisitanteIdAndDataHoraAgendamentoBetween(
-    visitante.getId(),
-    requestDTO.getDataHoraAgendamento().minusHours(1),
-    requestDTO.getDataHoraAgendamento().plusHours(1));
+        // Verificar se o custodiado já tem agendamento no mesmo horário
+        List<AgendamentoVisita> agendamentosConflitantes = agendamentoRepository.findAgendamentosConflitantes(
+            custodiado.getId(),
+            requestDTO.getDataHoraAgendamento().minusHours(1),
+            requestDTO.getDataHoraAgendamento().plusHours(1),
+            getStatusCanceladoId());
 
-if (!agendamentosVisitante.isEmpty()) {
-log.warn("Conflito de agendamento detectado para o visitante ID: {}", visitante.getId());
-throw new AgendamentoConflitanteException(MSG_CONFLITO_VISITANTE);
-}
+        if (!agendamentosConflitantes.isEmpty()) {
+            log.warn("Conflito de agendamento detectado para o custodiado ID: {}", custodiado.getId());
+            throw new AgendamentoConflitanteException(MSG_CONFLITO_CUSTODIADO);
+        }
+
+        // Verificar se o visitante já tem agendamento no mesmo horário
+        List<AgendamentoVisita> agendamentosVisitante = agendamentoRepository.findByVisitanteIdAndDataHoraAgendamentoBetween(
+            visitante.getId(),
+            requestDTO.getDataHoraAgendamento().minusHours(1),
+            requestDTO.getDataHoraAgendamento().plusHours(1));
+
+        if (!agendamentosVisitante.isEmpty()) {
+            log.warn("Conflito de agendamento detectado para o visitante ID: {}", visitante.getId());
+            throw new AgendamentoConflitanteException(MSG_CONFLITO_VISITANTE);
+        }
+
         // Criar e salvar o agendamento
         AgendamentoVisita agendamento = new AgendamentoVisita();
         agendamento.setCustodiado(custodiado);
@@ -122,10 +125,10 @@ throw new AgendamentoConflitanteException(MSG_CONFLITO_VISITANTE);
         agendamento.setDataHoraAgendamento(requestDTO.getDataHoraAgendamento());
         agendamento.setStatus(statusAgendado);
         agendamento.setObservacoes(requestDTO.getObservacoes());
-        
+
         agendamento = agendamentoRepository.save(agendamento);
         log.info("Agendamento de visita criado com sucesso. ID: {}", agendamento.getId());
-        
+
         return new AgendamentoVisitaResponseDTO(agendamento);
     }
 
@@ -136,131 +139,127 @@ throw new AgendamentoConflitanteException(MSG_CONFLITO_VISITANTE);
         
         // Buscar o agendamento existente
         AgendamentoVisita agendamento = buscarAgendamento(id);
-        
+
         // Verificar se o agendamento não está cancelado
         verificarStatusCancelado(agendamento, id);
-        
-        // Validar se o horário está dentro dos períodos permitidos
-        validarHorarioAgendamento(requestDTO);
-        
+
+        // Agora usa o objeto injetado:
+        if (!horarioVisitaUtil.isHorarioPermitido(requestDTO.getDataHoraAgendamento())) {
+            log.warn("Tentativa de agendamento em horário não permitido: {}", requestDTO.getDataHoraAgendamento());
+            throw new HorarioNaoPermitidoException(MSG_HORARIO_NAO_PERMITIDO);
+        }
+
         // Verificar se há alteração no custodiado ou visitante
         boolean alterouCustodiado = !agendamento.getCustodiado().getId().equals(requestDTO.getCustodiadoId());
         boolean alterouVisitante = !agendamento.getVisitante().getId().equals(requestDTO.getVisitanteId());
-        boolean alterouDataHora = !agendamento.getDataHoraAgendamento().equals(requestDTO.getDataHoraAgendamento());
-        
+        boolean alterouDataHora  = !agendamento.getDataHoraAgendamento().equals(requestDTO.getDataHoraAgendamento());
+
         // Se houve alteração, buscar as novas entidades
         Custodiado custodiado = agendamento.getCustodiado();
         if (alterouCustodiado) {
             custodiado = custodiadoRepository.findById(requestDTO.getCustodiadoId())
-                    .orElseThrow(() -> new RecursoNaoEncontradoException(MSG_CUSTODIADO_NAO_ENCONTRADO + requestDTO.getCustodiadoId()));
+                .orElseThrow(() -> new RecursoNaoEncontradoException(MSG_CUSTODIADO_NAO_ENCONTRADO + requestDTO.getCustodiadoId()));
         }
-        
+
         Visitante visitante = agendamento.getVisitante();
         if (alterouVisitante) {
             visitante = visitanteRepository.findById(requestDTO.getVisitanteId())
-                    .orElseThrow(() -> new RecursoNaoEncontradoException(MSG_VISITANTE_NAO_ENCONTRADO + requestDTO.getVisitanteId()));
+                .orElseThrow(() -> new RecursoNaoEncontradoException(MSG_VISITANTE_NAO_ENCONTRADO + requestDTO.getVisitanteId()));
         }
-        
+
         // Verificar limite de visitantes por dia se necessário
         verificarLimiteVisitantes(custodiado, requestDTO, alterouCustodiado, alterouDataHora);
-        
+
         // Verificar conflitos de horário se necessário
         verificarConflitosHorario(custodiado, visitante, requestDTO, alterouCustodiado, alterouVisitante, alterouDataHora, id);
-        
+
         // Atualizar o agendamento
         agendamento.setCustodiado(custodiado);
         agendamento.setVisitante(visitante);
         agendamento.setDataHoraAgendamento(requestDTO.getDataHoraAgendamento());
         agendamento.setObservacoes(requestDTO.getObservacoes());
-        
+
         // Se status for fornecido, atualizar
         if (requestDTO.getStatusId() != null && !requestDTO.getStatusId().equals(agendamento.getStatus().getId())) {
             Status novoStatus = statusRepository.findById(requestDTO.getStatusId())
-                    .orElseThrow(() -> new RecursoNaoEncontradoException("Status não encontrado com ID: " + requestDTO.getStatusId()));
-            
+                .orElseThrow(() -> new RecursoNaoEncontradoException("Status não encontrado com ID: " + requestDTO.getStatusId()));
+
             // Validar a transição de status
             validarTransicaoStatus(agendamento.getStatus().getDescricao(), novoStatus.getDescricao());
-            
+
             agendamento.setStatus(novoStatus);
         }
-        
+
         agendamento = agendamentoRepository.save(agendamento);
         log.info("Agendamento de visita atualizado com sucesso. ID: {}", agendamento.getId());
-        
+
         return new AgendamentoVisitaResponseDTO(agendamento);
     }
-    
+
     private AgendamentoVisita buscarAgendamento(Long id) {
         return agendamentoRepository.findById(id)
-                .orElseThrow(() -> new RecursoNaoEncontradoException(MSG_AGENDAMENTO_NAO_ENCONTRADO + id));
+            .orElseThrow(() -> new RecursoNaoEncontradoException(MSG_AGENDAMENTO_NAO_ENCONTRADO + id));
     }
-    
+
     private void verificarStatusCancelado(AgendamentoVisita agendamento, Long id) {
         if (agendamento.getStatus().getDescricao().equalsIgnoreCase(STATUS_CANCELADO)) {
             log.warn("Tentativa de atualizar agendamento cancelado. ID: {}", id);
             throw new OperacaoInvalidaException("Não é possível atualizar um agendamento cancelado.");
         }
     }
-    
-    private void validarHorarioAgendamento(AgendamentoVisitaRequestDTO requestDTO) {
-        if (!HorarioVisitaUtil.isHorarioPermitido(requestDTO.getDataHoraAgendamento())) {
-            log.warn("Tentativa de agendamento em horário não permitido: {}", requestDTO.getDataHoraAgendamento());
-            throw new HorarioNaoPermitidoException(MSG_HORARIO_NAO_PERMITIDO);
-        }
-    }
-    
-    private void verificarLimiteVisitantes(Custodiado custodiado, AgendamentoVisitaRequestDTO requestDTO, 
-                                          boolean alterouCustodiado, boolean alterouDataHora) {
+
+    private void verificarLimiteVisitantes(Custodiado custodiado, AgendamentoVisitaRequestDTO requestDTO,
+                                           boolean alterouCustodiado, boolean alterouDataHora) {
         if (alterouCustodiado || alterouDataHora) {
             LocalDate dataVisita = requestDTO.getDataHoraAgendamento().toLocalDate();
             long visitasNoMesmoDia = agendamentoRepository.countByCustodiadoIdAndDataHoraAgendamentoBetween(
-                    custodiado.getId(), 
-                    dataVisita.atStartOfDay(), 
-                    dataVisita.atTime(23, 59, 59));
-            
-            // Não contar o agendamento atual se for o mesmo dia
+                custodiado.getId(),
+                dataVisita.atStartOfDay(),
+                dataVisita.atTime(23, 59, 59));
+
+            // Não contar o agendamento atual se for o mesmo dia (caso seja a lógica desejada)
             if (alterouDataHora && !alterouCustodiado) {
                 visitasNoMesmoDia--;
             }
-            
+
             if (visitasNoMesmoDia >= 2) {
                 log.warn("Limite de visitantes por dia excedido para o custodiado ID: {}", custodiado.getId());
                 throw new AgendamentoConflitanteException(MSG_LIMITE_VISITANTES);
             }
         }
     }
-    
+
     private void verificarConflitosHorario(Custodiado custodiado, Visitante visitante, AgendamentoVisitaRequestDTO requestDTO,
-                                          boolean alterouCustodiado, boolean alterouVisitante, boolean alterouDataHora, Long id) {
+                                           boolean alterouCustodiado, boolean alterouVisitante, boolean alterouDataHora, Long id) {
         if (alterouCustodiado || alterouVisitante || alterouDataHora) {
             // Verificar conflitos para o custodiado
             List<AgendamentoVisita> agendamentosConflitantes = agendamentoRepository.findAgendamentosConflitantes(
-                    custodiado.getId(),
-                    requestDTO.getDataHoraAgendamento().minusHours(1),
-                    requestDTO.getDataHoraAgendamento().plusHours(1),
-                    getStatusCanceladoId());
-            
+                custodiado.getId(),
+                requestDTO.getDataHoraAgendamento().minusHours(1),
+                requestDTO.getDataHoraAgendamento().plusHours(1),
+                getStatusCanceladoId());
+
             // Remover o agendamento atual da lista de conflitos
             agendamentosConflitantes = agendamentosConflitantes.stream()
-                    .filter(a -> !a.getId().equals(id))
-                    .toList();
-            
+                .filter(a -> !a.getId().equals(id))
+                .toList();
+
             if (!agendamentosConflitantes.isEmpty()) {
                 log.warn("Conflito de agendamento detectado para o custodiado ID: {}", custodiado.getId());
                 throw new AgendamentoConflitanteException(MSG_CONFLITO_CUSTODIADO);
             }
-            
+
             // Verificar conflitos para o visitante
             List<AgendamentoVisita> agendamentosVisitante = agendamentoRepository.findByVisitanteIdAndDataHoraAgendamentoBetween(
-                    visitante.getId(),
-                    requestDTO.getDataHoraAgendamento().minusHours(1),
-                    requestDTO.getDataHoraAgendamento().plusHours(1));
-            
+                visitante.getId(),
+                requestDTO.getDataHoraAgendamento().minusHours(1),
+                requestDTO.getDataHoraAgendamento().plusHours(1));
+
             // Remover o agendamento atual da lista de conflitos
             agendamentosVisitante = agendamentosVisitante.stream()
-                    .filter(a -> !a.getId().equals(id))
-                    .toList();
-            
+                .filter(a -> !a.getId().equals(id))
+                .toList();
+
             if (!agendamentosVisitante.isEmpty()) {
                 log.warn("Conflito de agendamento detectado para o visitante ID: {}", visitante.getId());
                 throw new AgendamentoConflitanteException(MSG_CONFLITO_VISITANTE);
@@ -285,8 +284,8 @@ throw new AgendamentoConflitanteException(MSG_CONFLITO_VISITANTE);
         List<AgendamentoVisita> agendamentos = agendamentoRepository.findAll();
         
         return agendamentos.stream()
-                .map(AgendamentoVisitaResponseDTO::new)
-                .collect(Collectors.toList());
+            .map(AgendamentoVisitaResponseDTO::new)
+            .toList();
     }
 
     @Override
@@ -294,7 +293,7 @@ throw new AgendamentoConflitanteException(MSG_CONFLITO_VISITANTE);
     public AgendamentoVisitaResponseDTO buscarAgendamentoPorId(Long id) {
         log.info("Buscando agendamento por ID: {}", id);
         AgendamentoVisita agendamento = agendamentoRepository.findById(id)
-                .orElseThrow(() -> new RecursoNaoEncontradoException("Agendamento não encontrado com ID: " + id));
+            .orElseThrow(() -> new RecursoNaoEncontradoException(MSG_AGENDAMENTO_NAO_ENCONTRADO + id));
         
         return new AgendamentoVisitaResponseDTO(agendamento);
     }
@@ -323,12 +322,13 @@ throw new AgendamentoConflitanteException(MSG_CONFLITO_VISITANTE);
         
         // Buscar agendamentos com os filtros
         Page<AgendamentoVisita> pagina = agendamentoRepository.findComFiltrosPaginado(
-                filtro.getCustodiadoId(),
-                filtro.getVisitanteId(),
-                dataInicio,
-                dataFim,
-                filtro.getStatusId(),
-                pageable);
+            filtro.getCustodiadoId(),
+            filtro.getVisitanteId(),
+            dataInicio,
+            dataFim,
+            filtro.getStatusId(),
+            pageable
+        );
         
         Page<AgendamentoVisitaResponseDTO> paginaDTO = pagina.map(AgendamentoVisitaResponseDTO::new);
         return new PageResponseDTO<>(paginaDTO);
@@ -351,13 +351,13 @@ throw new AgendamentoConflitanteException(MSG_CONFLITO_VISITANTE);
         
         // Verificar se o custodiado existe
         if (!custodiadoRepository.existsById(custodiadoId)) {
-            throw new RecursoNaoEncontradoException("Custodiado não encontrado com ID: " + custodiadoId);
+            throw new RecursoNaoEncontradoException(MSG_CUSTODIADO_NAO_ENCONTRADO + custodiadoId);
         }
         
-        Page<AgendamentoVisita> pagina = agendamentoRepository.findByCustodiadoId(custodiadoId, pageable);
-        
-        Page<AgendamentoVisitaResponseDTO> paginaDTO = pagina.map(AgendamentoVisitaResponseDTO::new);
-        return new PageResponseDTO<>(paginaDTO);
+        return new PageResponseDTO<>(
+            agendamentoRepository.findByCustodiadoId(custodiadoId, pageable)
+                .map(AgendamentoVisitaResponseDTO::new)
+        );
     }
 
     @Override
@@ -367,81 +367,106 @@ throw new AgendamentoConflitanteException(MSG_CONFLITO_VISITANTE);
         
         // Verificar se o visitante existe
         if (!visitanteRepository.existsById(visitanteId)) {
-            throw new RecursoNaoEncontradoException("Visitante não encontrado com ID: " + visitanteId);
+            throw new RecursoNaoEncontradoException(MSG_VISITANTE_NAO_ENCONTRADO + visitanteId);
         }
         
-        Page<AgendamentoVisita> pagina = agendamentoRepository.findByVisitanteId(visitanteId, pageable);
-        
-        Page<AgendamentoVisitaResponseDTO> paginaDTO = pagina.map(AgendamentoVisitaResponseDTO::new);
-        return new PageResponseDTO<>(paginaDTO);
+        return new PageResponseDTO<>(
+            agendamentoRepository.findByVisitanteId(visitanteId, pageable)
+                .map(AgendamentoVisitaResponseDTO::new)
+        );
     }
 
     @Override
     @Transactional
     public void cancelarAgendamento(Long id) {
-        log.info("Iniciando cancelamento de agendamento. ID: {}", id);
+        log.info(String.format("Iniciando cancelamento de agendamento. ID: %d", id));
         
         AgendamentoVisita agendamento = agendamentoRepository.findById(id)
-                .orElseThrow(() -> new RecursoNaoEncontradoException("Agendamento não encontrado com ID: " + id));
-        
+                .orElseThrow(() -> new RecursoNaoEncontradoException(
+                    String.format(MSG_AGENDAMENTO_NAO_ENCONTRADO, id)
+                ));
+
         // Verificar se o agendamento já está cancelado
-        if (agendamento.getStatus().getDescricao().equalsIgnoreCase("CANCELADO")) {
-            log.warn("Tentativa de cancelar agendamento já cancelado. ID: {}", id);
-            throw new OperacaoInvalidaException("Agendamento já está cancelado.");
+        if (agendamento.getStatus().getDescricao().equalsIgnoreCase(STATUS_CANCELADO)) {
+            log.warn(String.format("Tentativa de cancelar agendamento já cancelado. ID: %d", id));
+            throw new OperacaoInvalidaException(MSG_AGENDAMENTO_CANCELADO);
         }
         
         // Verificar se o agendamento já foi realizado
-        if (agendamento.getStatus().getDescricao().equalsIgnoreCase("REALIZADO")) {
-            log.warn("Tentativa de cancelar agendamento já realizado. ID: {}", id);
-            throw new OperacaoInvalidaException("Não é possível cancelar um agendamento já realizado.");
+        if (agendamento.getStatus().getDescricao().equalsIgnoreCase(STATUS_REALIZADO)) {
+            log.warn(String.format("Tentativa de cancelar agendamento já realizado. ID: %d", id));
+            throw new OperacaoInvalidaException(MSG_AGENDAMENTO_REALIZADO);
         }
         
-        Status statusCancelado = statusRepository.findByDescricaoIgnoreCase("CANCELADO")
+        // Buscar status de cancelado
+        Status statusCancelado = statusRepository.findByDescricaoIgnoreCase(STATUS_CANCELADO)
                 .orElseThrow(() -> new RecursoNaoEncontradoException("Status CANCELADO não encontrado"));
         
+        // Atualizar status do agendamento
         agendamento.setStatus(statusCancelado);
         agendamentoRepository.save(agendamento);
-        log.info("Agendamento cancelado com sucesso. ID: {}", id);
+        
+        log.info(String.format("Agendamento cancelado com sucesso. ID: %d", id));
     }
-    
+
     /**
      * Obtém o ID do status cancelado.
      * 
      * @return ID do status CANCELADO
      */
     private Long getStatusCanceladoId() {
-        return statusRepository.findByDescricaoIgnoreCase("CANCELADO")
-                .orElseThrow(() -> new RecursoNaoEncontradoException("Status CANCELADO não encontrado")).getId();
+        return statusRepository.findByDescricaoIgnoreCase(STATUS_CANCELADO)
+                .orElseThrow(() -> new RecursoNaoEncontradoException("Status " + STATUS_CANCELADO + " não encontrado"))
+                .getId();
     }
+    
     
     /**
      * Valida se a transição de status é permitida.
      * 
      * @param statusAtual Descrição do status atual
-     * @param novoStatus Descrição do novo status
+     * @param novoStatus  Descrição do novo status
      */
     private void validarTransicaoStatus(String statusAtual, String novoStatus) {
         switch (statusAtual.toUpperCase()) {
-            case "AGENDADO":
+            case STATUS_AGENDADO:
                 // De AGENDADO pode ir para CONFIRMADO ou CANCELADO
-                if (!novoStatus.equalsIgnoreCase("CONFIRMADO") && !novoStatus.equalsIgnoreCase("CANCELADO")) {
-                    throw new OperacaoInvalidaException("Transição de status inválida. De AGENDADO só é possível ir para CONFIRMADO ou CANCELADO.");
+                if (!novoStatus.equalsIgnoreCase(STATUS_CONFIRMADO) && 
+                    !novoStatus.equalsIgnoreCase(STATUS_CANCELADO)) {
+                    throw new OperacaoInvalidaException(
+                        String.format("Transição de status inválida. De %s só é possível ir para %s ou %s.", 
+                                      STATUS_AGENDADO, STATUS_CONFIRMADO, STATUS_CANCELADO)
+                    );
                 }
                 break;
-            case "CONFIRMADO":
+            
+            case STATUS_CONFIRMADO:
                 // De CONFIRMADO pode ir para REALIZADO ou CANCELADO
-                if (!novoStatus.equalsIgnoreCase("REALIZADO") && !novoStatus.equalsIgnoreCase("CANCELADO")) {
-                    throw new OperacaoInvalidaException("Transição de status inválida. De CONFIRMADO só é possível ir para REALIZADO ou CANCELADO.");
+                if (!novoStatus.equalsIgnoreCase(STATUS_REALIZADO) && 
+                    !novoStatus.equalsIgnoreCase(STATUS_CANCELADO)) {
+                    throw new OperacaoInvalidaException(
+                        String.format("Transição de status inválida. De %s só é possível ir para %s ou %s.", 
+                                      STATUS_CONFIRMADO, STATUS_REALIZADO, STATUS_CANCELADO)
+                    );
                 }
                 break;
-            case "REALIZADO":
+            
+            case STATUS_REALIZADO:
                 // De REALIZADO não pode mudar
-                throw new OperacaoInvalidaException("Não é possível alterar o status de uma visita já REALIZADA.");
-            case "CANCELADO":
+                throw new OperacaoInvalidaException(
+                    String.format("Não é possível alterar o status de uma visita %s.", STATUS_REALIZADO)
+                );
+            
+            case STATUS_CANCELADO:
                 // De CANCELADO não pode mudar
-                throw new OperacaoInvalidaException("Não é possível alterar o status de uma visita CANCELADA.");
+                throw new OperacaoInvalidaException(
+                    String.format("Não é possível alterar o status de uma visita %s.", STATUS_CANCELADO)
+                );
+            
             default:
-                break;
+                throw new OperacaoInvalidaException(
+                    "Status de agendamento inválido: " + statusAtual
+                );
         }
     }
 }
